Fixed crashing events; Fixed datepicker container being invisible; Fixed weird popup for login and sign up

--- a/app/stylesheets/partials/_di-application.scss
+++ b/app/stylesheets/partials/_di-application.scss
@@ -1,4 +1,10 @@
 /* DateIdeas application-wide styles */
+
+.ui-datepicker {
+	background-color: #FFF;
+	background: #eceadf url(images/ui-bg_fine-grain_10_eceadf_60x60.png) 50% 50% repeat;
+}
+
 body {
 	font-family: Helvetica !important;
 /*	font-size: 20px;*/
