--- a/public/stylesheets/jquery.ui.datepicker.css
+++ b/public/stylesheets/jquery.ui.datepicker.css
@@ -7,6 +7,10 @@
  *
  * http://docs.jquery.com/UI/Datepicker#theming
  */
+.ui-datepicker {
+	background-color: #FFF;
+/*	background: #eceadf url(images/ui-bg_fine-grain_10_eceadf_60x60.png) 50% 50% repeat;*/
+}
 .ui-datepicker { width: 17em; padding: .2em .2em 0; display: none; }
 .ui-datepicker .ui-datepicker-header { position:relative; padding:.2em 0; }
 .ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next { position:absolute; top: 2px; width: 1.8em; height: 1.8em; }
